Improvements & PR Feedback Changes